Change of Application name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>TODO 2 App</title>
 </head>
 <body>
-    <h1>Social Media App</h1>
+    <h1>To DO List</h1>
 
     <div class="conatainer"></div>
 
